openapi: update generated code
